--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,17 @@ knitr::opts_chunk$set(
 
 This repository holds all data and code used for SOC 721S.
 
+## plots
+
+__Drug coverage:__
+
+```{r, out.width="100%", echo=FALSE}
+knitr::include_graphics("nsduh_coverage.png")
+```
+
+
+## raw data
+
 I'm not sharing the `raw_data` folder, which is quite heavy.
 
 ```{r}
